mesh/app/cartservice/cartserice-virtual-service.yml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: cartservice
  namespace: my-apps
spec:
  awsName: cartservice.my-apps.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: cartservice-virtual-router
